hands-on/k8s-day2/networkpolicy/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-${STUDENT_ID}-blue
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ${STUDENT_ID}-blue
  podSelector: {}
  policyTypes:
  - Ingress
